<resources>
    <string name="app_name">Prepared</string>
    <string name="facebook_app_id">2772695632850745</string>
    <string name="fb_login_protocol_scheme">fb2772695632850745</string>


    <string name="addTrip">Add Trip</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="startDate">Start Date</string>
    <string name="startLocation">Start Location</string>
    <string name="destination">Destination</string>
    <string name="endDate">End Date</string>

    <string-array name="repeat">
        <item>No Repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string-array name="round">
        <item>One way</item>
        <item>Round trip</item>

    </string-array>

    <string name="startTime">Start Time</string>
    <string name="time">Time..</string>
    <string name="btnNotes">Add Notes</string>
    <string name="btnAdd">Add</string>
    <string name="tripName">Trip Name</string>
    <string name="supposedDirections">Supposed directions</string>
    <string name="updateTrip">Update trip</string>
    <string name="btnDelete">Delete Trip</string>
    <string name="description">Description</string>
    <string name="startTrip">Start</string>
    <string name="title_activity_home_trip">HomeTripActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_email">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_async">Async</string>
    <string name="menu_logout">Logout</string>

    <string name="home_second">Home Second</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_Trip">Start</string>
    <string name="menu_backup">Delete Backup</string>
    <string name="undo">Undo</string>
    <string name="show_notes">Show Notes</string>
    <string name="start_trip">Start</string>
    <string name="roundedTripInfo">Rounded trip information</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="email_hint">Enter Email</string>
    <string name="pass_hint">Enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_txt">Login</string>
    <string name="distance">Distance</string>
    <string name="Duration">Duration</string>
</resources>
