<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_icon"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_async"
            android:icon="@drawable/logout"
            android:title="@string/menu_async" />

    </group>
    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_backup"
                android:icon="@drawable/logout"
                android:title="@string/menu_backup" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
