<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="UI.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <argument
            android:name="i"
            app:argType="string"
            android:defaultValue='"hhh"' />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.trippalnner.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_home_second_to_nav_gallery2"
            app:destination="@id/nav_history" />
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="UI.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_nav_gallery_to_nav_home_second2"
            app:destination="@id/nav_home_second" />
        <argument android:name="userId" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.trippalnner.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_async"
        tools:layout="@layout/fragment_slideshow" />
</navigation>